ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error10.asc
function foo(print,input){	//Collision with 'print' library function, //Collision with 'input' library function
   print(geia);
}

function print() {		//User function 'print', collision with 'print' library function
}


function F() {
   local print;                 //Collision with 'print' library function.
}

